# firefox-cli

./: Cargo.toml
src/: app.rs  browser.rs  cli.rs  connection.rs  get_handlers.rs  main.rs  session.rs  tabs_handlers.rs
