[package]
name = "firefox-cli"
version = "0.1.0"
edition = "2024"
description = "Firefox automation CLI using Marionette protocol"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lz4_flex = "0.11"
dirs = "6"
base64 = "0.22"

[profile.release]
lto = false
